Add Java unit tests for UserService and CategoryService
Co-authored-by: congiuluc <9011632+congiuluc@users.noreply.github.com>